# sherlock-back

./: .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  bitbucket-pipelines.yml  cert.pem  docker-compose.yml  key.pem  pyproject.toml
deployment/local/backend/: start
deployment/local/worker/: Dockerfile
deployment/production/backend/: entrypoint.sh
deployment/production/task-definitions/: backend.json  worker.json
deployment/production/worker/: Dockerfile
deployment/test/: entrypoint.sh
sherlock/configs/: asgi.py  urls.py  wsgi.py
sherlock/configs/settings/: common.py  tests.py
sherlock/home/: apps.py  permissions.py  urls.py  utils.py
sherlock/home/dataclasses/: __init__.py  widget.py
sherlock/home/extensions/: client.py
sherlock/home/migrations/: 0001_initial.py
sherlock/home/models/: base.py  cross_sell.py  discount.py  product.py  shop.py  upsell.py
sherlock/home/serializers/: __init__.py  cross_sell.py  product.py  upsell.py
sherlock/home/services/: widget.py
sherlock/home/tasks/: __init__.py  product.py  shop.py
sherlock/home/templates/: widget.css  widget.py
sherlock/home/views/: __init__.py  base.py  cross_sell.py  discount.py  product.py  upsell.py
sherlock/shopify_app/: services.py  urls.py
sherlock/shopify_app/script_tags/: local_widget_script_tag.js
sherlock/shopify_app/views/: __init__.py  auth.py  cross_sell_widget.py
sherlock/users/: models.py  serializers.py  urls.py  views.py
sherlock/users/migrations/: 0001_initial.py
sherlock/users/tests/: factories.py  tests.py
(+2 files in other folders)
